// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`VDataTable should mount component and match snapshot 1`] = `
<div class="v-data-table">
  <div class="v-data-table__inner">
    <div class="v-data-table__header"
         color
    >
    </div>
    <div class="v-data-table__body">
    </div>
  </div>
  <div class="v-data-table__footer">
    <div class="v-data-table__pagination">
      <div class="v-data-table__pagination-select">
        <span class="v-data-table__pagination-label">
          Rows per page
        </span>
        <button class="v-button primary">
          <div class="v-button__content">
            <div class="v-data-table__rows-count-value">
              5
            </div>
          </div>
        </button>
      </div>
      <div class="v-data-table__pagination-pages">
        -
      </div>
      <div class="v-data-table__pagination-route">
        <button class="v-button elevation-3 primary"
                style="width: 42px;"
        >
          <div class="v-button__content">
            <i class="v-icon fas fa-chevron-left sm white--text">
            </i>
          </div>
        </button>
        <button class="v-button elevation-3 primary"
                style="width: 42px; margin: 0px 10px;"
        >
          <div class="v-button__content">
            1
          </div>
        </button>
        <button class="v-button elevation-3 primary"
                style="width: 42px;"
        >
          <div class="v-button__content">
            <i class="v-icon fas fa-chevron-right sm white--text">
            </i>
          </div>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`VDataTable should test align center and match snapshot 1`] = `
<div class="v-data-table">
  <div class="v-data-table__inner">
    <div class="v-data-table__header"
         color
    >
      <div class="v-data-table__cell v-data-table__cell--themeable v-data-table-col"
           style="width: 125px;"
      >
        <div class="v-data-table__cell-content text-align--center">
          <div class="v-data-table-col__title">
            Name
          </div>
          <span class="v-data-table-col__actions">
          </span>
          <transition-stub name="fade"
                           mode
                           appear="false"
                           persisted="false"
                           css="true"
          >
          </transition-stub>
        </div>
      </div>
      <div class="v-data-table__cell v-data-table__cell--themeable v-data-table-col"
           style="width: 125px;"
      >
        <div class="v-data-table__cell-content text-align--center">
          <div class="v-data-table-col__title">
            Email
          </div>
          <span class="v-data-table-col__actions">
          </span>
          <transition-stub name="fade"
                           mode
                           appear="false"
                           persisted="false"
                           css="true"
          >
          </transition-stub>
        </div>
      </div>
      <div class="v-data-table__cell v-data-table__cell--themeable v-data-table-col"
           style="width: 125px;"
      >
        <div class="v-data-table__cell-content text-align--center">
          <div class="v-data-table-col__title">
            Body
          </div>
          <span class="v-data-table-col__actions">
          </span>
          <transition-stub name="fade"
                           mode
                           appear="false"
                           persisted="false"
                           css="true"
          >
          </transition-stub>
        </div>
      </div>
    </div>
    <div class="v-data-table__body">
      <div class="v-data-table__row">
        <div class="v-data-table__cell v-data-table__cell--themeable"
             style="width: 125px;"
        >
          <div class="v-data-table__cell-content text-align--center">
            Ben
          </div>
        </div>
        <div class="v-data-table__cell v-data-table__cell--themeable"
             style="width: 125px;"
        >
          <div class="v-data-table__cell-content text-align--center">
            ben@mail.ru
          </div>
        </div>
        <div class="v-data-table__cell v-data-table__cell--themeable"
             style="width: 125px;"
        >
          <div class="v-data-table__cell-content text-align--center">
            some body text
          </div>
        </div>
      </div>
      <div class="v-data-table__row">
        <div class="v-data-table__cell v-data-table__cell--themeable"
             style="width: 125px;"
        >
          <div class="v-data-table__cell-content text-align--center">
            Alex
          </div>
        </div>
        <div class="v-data-table__cell v-data-table__cell--themeable"
             style="width: 125px;"
        >
          <div class="v-data-table__cell-content text-align--center">
            alex@mail.ru
          </div>
        </div>
        <div class="v-data-table__cell v-data-table__cell--themeable"
             style="width: 125px;"
        >
          <div class="v-data-table__cell-content text-align--center">
            some body text
          </div>
        </div>
      </div>
      <div class="v-data-table__row">
        <div class="v-data-table__cell v-data-table__cell--themeable"
             style="width: 125px;"
        >
          <div class="v-data-table__cell-content text-align--center">
            cccccc
          </div>
        </div>
        <div class="v-data-table__cell v-data-table__cell--themeable"
             style="width: 125px;"
        >
          <div class="v-data-table__cell-content text-align--center">
            Eliseo@gardner.biz
          </div>
        </div>
        <div class="v-data-table__cell v-data-table__cell--themeable"
             style="width: 125px;"
        >
          <div class="v-data-table__cell-content text-align--center">
            laudantium enim quasi est quidem magnam voluptate ipsam eos
            tempora quo necessitatibus
            dolor quam autem quasi
            reiciendis et nam sapiente accusantium
          </div>
        </div>
      </div>
      <div class="v-data-table__row">
        <div class="v-data-table__cell v-data-table__cell--themeable"
             style="width: 125px;"
        >
          <div class="v-data-table__cell-content text-align--center">
            dddddd
          </div>
        </div>
        <div class="v-data-table__cell v-data-table__cell--themeable"
             style="width: 125px;"
        >
          <div class="v-data-table__cell-content text-align--center">
            Jayne_Kuhic@sydney.com
          </div>
        </div>
        <div class="v-data-table__cell v-data-table__cell--themeable"
             style="width: 125px;"
        >
          <div class="v-data-table__cell-content text-align--center">
            est natus enim nihil est dolore omnis voluptatem numquam
            et omnis occaecati quod ullam at
            voluptatem error expedita pariatur
            nihil sint nostrum voluptatem reiciendis et
          </div>
        </div>
      </div>
      <div class="v-data-table__row">
        <div class="v-data-table__cell v-data-table__cell--themeable"
             style="width: 125px;"
        >
          <div class="v-data-table__cell-content text-align--center">
            eeeeee
          </div>
        </div>
        <div class="v-data-table__cell v-data-table__cell--themeable"
             style="width: 125px;"
        >
          <div class="v-data-table__cell-content text-align--center">
            Nikita@garfield.biz
          </div>
        </div>
        <div class="v-data-table__cell v-data-table__cell--themeable"
             style="width: 125px;"
        >
          <div class="v-data-table__cell-content text-align--center">
            quia molestiae reprehenderit quasi aspernatur
            aut expedita occaecati aliquam eveniet laudantium
            omnis quibusdam delectus saepe quia accusamus maiores nam est
            cum et ducimus et vero voluptates excepturi deleniti ratione
          </div>
        </div>
      </div>
    </div>
  </div>
  <div class="v-data-table__footer">
    <div class="v-data-table__pagination">
      <div class="v-data-table__pagination-select">
        <span class="v-data-table__pagination-label">
          Rows per page
        </span>
        <button class="v-button primary">
          <div class="v-button__content">
            <div class="v-data-table__rows-count-value">
              5
            </div>
          </div>
        </button>
      </div>
      <div class="v-data-table__pagination-pages">
        1 - 5 of 20
      </div>
      <div class="v-data-table__pagination-route">
        <button class="v-button elevation-3 primary"
                style="width: 42px;"
        >
          <div class="v-button__content">
            <i class="v-icon fas fa-chevron-left sm white--text">
            </i>
          </div>
        </button>
        <button class="v-button elevation-3 primary"
                style="width: 42px; margin: 0px 10px;"
        >
          <div class="v-button__content">
            1
          </div>
        </button>
        <button class="v-button elevation-3 primary"
                style="width: 42px;"
        >
          <div class="v-button__content">
            <i class="v-icon fas fa-chevron-right sm white--text">
            </i>
          </div>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`VDataTable should test align left and match snapshot 1`] = `
<div class="v-data-table">
  <div class="v-data-table__inner">
    <div class="v-data-table__header"
         color
    >
      <div class="v-data-table__cell v-data-table__cell--themeable v-data-table-col"
           style="width: 125px;"
      >
        <div class="v-data-table__cell-content text-align--left">
          <div class="v-data-table-col__title">
            Name
          </div>
          <span class="v-data-table-col__actions">
          </span>
          <transition-stub name="fade"
                           mode
                           appear="false"
                           persisted="false"
                           css="true"
          >
          </transition-stub>
        </div>
      </div>
      <div class="v-data-table__cell v-data-table__cell--themeable v-data-table-col"
           style="width: 125px;"
      >
        <div class="v-data-table__cell-content text-align--left">
          <div class="v-data-table-col__title">
            Email
          </div>
          <span class="v-data-table-col__actions">
          </span>
          <transition-stub name="fade"
                           mode
                           appear="false"
                           persisted="false"
                           css="true"
          >
          </transition-stub>
        </div>
      </div>
      <div class="v-data-table__cell v-data-table__cell--themeable v-data-table-col"
           style="width: 125px;"
      >
        <div class="v-data-table__cell-content text-align--left">
          <div class="v-data-table-col__title">
            Body
          </div>
          <span class="v-data-table-col__actions">
          </span>
          <transition-stub name="fade"
                           mode
                           appear="false"
                           persisted="false"
                           css="true"
          >
          </transition-stub>
        </div>
      </div>
    </div>
    <div class="v-data-table__body">
      <div class="v-data-table__row">
        <div class="v-data-table__cell v-data-table__cell--themeable"
             style="width: 125px;"
        >
          <div class="v-data-table__cell-content text-align--left">
            Ben
          </div>
        </div>
        <div class="v-data-table__cell v-data-table__cell--themeable"
             style="width: 125px;"
        >
          <div class="v-data-table__cell-content text-align--left">
            ben@mail.ru
          </div>
        </div>
        <div class="v-data-table__cell v-data-table__cell--themeable"
             style="width: 125px;"
        >
          <div class="v-data-table__cell-content text-align--left">
            some body text
          </div>
        </div>
      </div>
      <div class="v-data-table__row">
        <div class="v-data-table__cell v-data-table__cell--themeable"
             style="width: 125px;"
        >
          <div class="v-data-table__cell-content text-align--left">
            Alex
          </div>
        </div>
        <div class="v-data-table__cell v-data-table__cell--themeable"
             style="width: 125px;"
        >
          <div class="v-data-table__cell-content text-align--left">
            alex@mail.ru
          </div>
        </div>
        <div class="v-data-table__cell v-data-table__cell--themeable"
             style="width: 125px;"
        >
          <div class="v-data-table__cell-content text-align--left">
            some body text
          </div>
        </div>
      </div>
      <div class="v-data-table__row">
        <div class="v-data-table__cell v-data-table__cell--themeable"
             style="width: 125px;"
        >
          <div class="v-data-table__cell-content text-align--left">
            cccccc
          </div>
        </div>
        <div class="v-data-table__cell v-data-table__cell--themeable"
             style="width: 125px;"
        >
          <div class="v-data-table__cell-content text-align--left">
            Eliseo@gardner.biz
          </div>
        </div>
        <div class="v-data-table__cell v-data-table__cell--themeable"
             style="width: 125px;"
        >
          <div class="v-data-table__cell-content text-align--left">
            laudantium enim quasi est quidem magnam voluptate ipsam eos
            tempora quo necessitatibus
            dolor quam autem quasi
            reiciendis et nam sapiente accusantium
          </div>
        </div>
      </div>
      <div class="v-data-table__row">
        <div class="v-data-table__cell v-data-table__cell--themeable"
             style="width: 125px;"
        >
          <div class="v-data-table__cell-content text-align--left">
            dddddd
          </div>
        </div>
        <div class="v-data-table__cell v-data-table__cell--themeable"
             style="width: 125px;"
        >
          <div class="v-data-table__cell-content text-align--left">
            Jayne_Kuhic@sydney.com
          </div>
        </div>
        <div class="v-data-table__cell v-data-table__cell--themeable"
             style="width: 125px;"
        >
          <div class="v-data-table__cell-content text-align--left">
            est natus enim nihil est dolore omnis voluptatem numquam
            et omnis occaecati quod ullam at
            voluptatem error expedita pariatur
            nihil sint nostrum voluptatem reiciendis et
          </div>
        </div>
      </div>
      <div class="v-data-table__row">
        <div class="v-data-table__cell v-data-table__cell--themeable"
             style="width: 125px;"
        >
          <div class="v-data-table__cell-content text-align--left">
            eeeeee
          </div>
        </div>
        <div class="v-data-table__cell v-data-table__cell--themeable"
             style="width: 125px;"
        >
          <div class="v-data-table__cell-content text-align--left">
            Nikita@garfield.biz
          </div>
        </div>
        <div class="v-data-table__cell v-data-table__cell--themeable"
             style="width: 125px;"
        >
          <div class="v-data-table__cell-content text-align--left">
            quia molestiae reprehenderit quasi aspernatur
            aut expedita occaecati aliquam eveniet laudantium
            omnis quibusdam delectus saepe quia accusamus maiores nam est
            cum et ducimus et vero voluptates excepturi deleniti ratione
          </div>
        </div>
      </div>
    </div>
  </div>
  <div class="v-data-table__footer">
    <div class="v-data-table__pagination">
      <div class="v-data-table__pagination-select">
        <span class="v-data-table__pagination-label">
          Rows per page
        </span>
        <button class="v-button primary">
          <div class="v-button__content">
            <div class="v-data-table__rows-count-value">
              5
            </div>
          </div>
        </button>
      </div>
      <div class="v-data-table__pagination-pages">
        1 - 5 of 20
      </div>
      <div class="v-data-table__pagination-route">
        <button class="v-button elevation-3 primary"
                style="width: 42px;"
        >
          <div class="v-button__content">
            <i class="v-icon fas fa-chevron-left sm white--text">
            </i>
          </div>
        </button>
        <button class="v-button elevation-3 primary"
                style="width: 42px; margin: 0px 10px;"
        >
          <div class="v-button__content">
            1
          </div>
        </button>
        <button class="v-button elevation-3 primary"
                style="width: 42px;"
        >
          <div class="v-button__content">
            <i class="v-icon fas fa-chevron-right sm white--text">
            </i>
          </div>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`VDataTable should test align left and match snapshot 2`] = `
<div class="v-data-table">
  <div class="v-data-table__inner">
    <div class="v-data-table__header"
         color
    >
      <div class="v-data-table__cell v-data-table__cell--themeable v-data-table-col"
           style="width: 125px;"
      >
        <div class="v-data-table__cell-content text-align--right">
          <div class="v-data-table-col__title">
            Name
          </div>
          <span class="v-data-table-col__actions">
          </span>
          <transition-stub name="fade"
                           mode
                           appear="false"
                           persisted="false"
                           css="true"
          >
          </transition-stub>
        </div>
      </div>
      <div class="v-data-table__cell v-data-table__cell--themeable v-data-table-col"
           style="width: 125px;"
      >
        <div class="v-data-table__cell-content text-align--right">
          <div class="v-data-table-col__title">
            Email
          </div>
          <span class="v-data-table-col__actions">
          </span>
          <transition-stub name="fade"
                           mode
                           appear="false"
                           persisted="false"
                           css="true"
          >
          </transition-stub>
        </div>
      </div>
      <div class="v-data-table__cell v-data-table__cell--themeable v-data-table-col"
           style="width: 125px;"
      >
        <div class="v-data-table__cell-content text-align--right">
          <div class="v-data-table-col__title">
            Body
          </div>
          <span class="v-data-table-col__actions">
          </span>
          <transition-stub name="fade"
                           mode
                           appear="false"
                           persisted="false"
                           css="true"
          >
          </transition-stub>
        </div>
      </div>
    </div>
    <div class="v-data-table__body">
      <div class="v-data-table__row">
        <div class="v-data-table__cell v-data-table__cell--themeable"
             style="width: 125px;"
        >
          <div class="v-data-table__cell-content text-align--right">
            Ben
          </div>
        </div>
        <div class="v-data-table__cell v-data-table__cell--themeable"
             style="width: 125px;"
        >
          <div class="v-data-table__cell-content text-align--right">
            ben@mail.ru
          </div>
        </div>
        <div class="v-data-table__cell v-data-table__cell--themeable"
             style="width: 125px;"
        >
          <div class="v-data-table__cell-content text-align--right">
            some body text
          </div>
        </div>
      </div>
      <div class="v-data-table__row">
        <div class="v-data-table__cell v-data-table__cell--themeable"
             style="width: 125px;"
        >
          <div class="v-data-table__cell-content text-align--right">
            Alex
          </div>
        </div>
        <div class="v-data-table__cell v-data-table__cell--themeable"
             style="width: 125px;"
        >
          <div class="v-data-table__cell-content text-align--right">
            alex@mail.ru
          </div>
        </div>
        <div class="v-data-table__cell v-data-table__cell--themeable"
             style="width: 125px;"
        >
          <div class="v-data-table__cell-content text-align--right">
            some body text
          </div>
        </div>
      </div>
      <div class="v-data-table__row">
        <div class="v-data-table__cell v-data-table__cell--themeable"
             style="width: 125px;"
        >
          <div class="v-data-table__cell-content text-align--right">
            cccccc
          </div>
        </div>
        <div class="v-data-table__cell v-data-table__cell--themeable"
             style="width: 125px;"
        >
          <div class="v-data-table__cell-content text-align--right">
            Eliseo@gardner.biz
          </div>
        </div>
        <div class="v-data-table__cell v-data-table__cell--themeable"
             style="width: 125px;"
        >
          <div class="v-data-table__cell-content text-align--right">
            laudantium enim quasi est quidem magnam voluptate ipsam eos
            tempora quo necessitatibus
            dolor quam autem quasi
            reiciendis et nam sapiente accusantium
          </div>
        </div>
      </div>
      <div class="v-data-table__row">
        <div class="v-data-table__cell v-data-table__cell--themeable"
             style="width: 125px;"
        >
          <div class="v-data-table__cell-content text-align--right">
            dddddd
          </div>
        </div>
        <div class="v-data-table__cell v-data-table__cell--themeable"
             style="width: 125px;"
        >
          <div class="v-data-table__cell-content text-align--right">
            Jayne_Kuhic@sydney.com
          </div>
        </div>
        <div class="v-data-table__cell v-data-table__cell--themeable"
             style="width: 125px;"
        >
          <div class="v-data-table__cell-content text-align--right">
            est natus enim nihil est dolore omnis voluptatem numquam
            et omnis occaecati quod ullam at
            voluptatem error expedita pariatur
            nihil sint nostrum voluptatem reiciendis et
          </div>
        </div>
      </div>
      <div class="v-data-table__row">
        <div class="v-data-table__cell v-data-table__cell--themeable"
             style="width: 125px;"
        >
          <div class="v-data-table__cell-content text-align--right">
            eeeeee
          </div>
        </div>
        <div class="v-data-table__cell v-data-table__cell--themeable"
             style="width: 125px;"
        >
          <div class="v-data-table__cell-content text-align--right">
            Nikita@garfield.biz
          </div>
        </div>
        <div class="v-data-table__cell v-data-table__cell--themeable"
             style="width: 125px;"
        >
          <div class="v-data-table__cell-content text-align--right">
            quia molestiae reprehenderit quasi aspernatur
            aut expedita occaecati aliquam eveniet laudantium
            omnis quibusdam delectus saepe quia accusamus maiores nam est
            cum et ducimus et vero voluptates excepturi deleniti ratione
          </div>
        </div>
      </div>
    </div>
  </div>
  <div class="v-data-table__footer">
    <div class="v-data-table__pagination">
      <div class="v-data-table__pagination-select">
        <span class="v-data-table__pagination-label">
          Rows per page
        </span>
        <button class="v-button primary">
          <div class="v-button__content">
            <div class="v-data-table__rows-count-value">
              5
            </div>
          </div>
        </button>
      </div>
      <div class="v-data-table__pagination-pages">
        1 - 5 of 20
      </div>
      <div class="v-data-table__pagination-route">
        <button class="v-button elevation-3 primary"
                style="width: 42px;"
        >
          <div class="v-button__content">
            <i class="v-icon fas fa-chevron-left sm white--text">
            </i>
          </div>
        </button>
        <button class="v-button elevation-3 primary"
                style="width: 42px; margin: 0px 10px;"
        >
          <div class="v-button__content">
            1
          </div>
        </button>
        <button class="v-button elevation-3 primary"
                style="width: 42px;"
        >
          <div class="v-button__content">
            <i class="v-icon fas fa-chevron-right sm white--text">
            </i>
          </div>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`VDataTable should test color prop and match snapshot 1`] = `
<div class="v-data-table grey darken-3">
  <div class="v-data-table__inner">
    <div class="v-data-table__header grey darken-3"
         color="grey darken-3"
    >
    </div>
    <div class="v-data-table__body grey darken-3">
    </div>
  </div>
  <div class="v-data-table__footer grey darken-3">
    <div class="v-data-table__pagination">
      <div class="v-data-table__pagination-select">
        <span class="v-data-table__pagination-label">
          Rows per page
        </span>
        <button class="v-button primary">
          <div class="v-button__content">
            <div class="v-data-table__rows-count-value">
              5
            </div>
          </div>
        </button>
      </div>
      <div class="v-data-table__pagination-pages">
        -
      </div>
      <div class="v-data-table__pagination-route">
        <button class="v-button elevation-3 primary"
                style="width: 42px;"
        >
          <div class="v-button__content">
            <i class="v-icon fas fa-chevron-left sm white--text">
            </i>
          </div>
        </button>
        <button class="v-button elevation-3 primary"
                style="width: 42px; margin: 0px 10px;"
        >
          <div class="v-button__content">
            1
          </div>
        </button>
        <button class="v-button elevation-3 primary"
                style="width: 42px;"
        >
          <div class="v-button__content">
            <i class="v-icon fas fa-chevron-right sm white--text">
            </i>
          </div>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`VDataTable should test cols prop and match snapshot 1`] = `
<div class="v-data-table">
  <div class="v-data-table__inner">
    <div class="v-data-table__header"
         color
    >
      <div class="v-data-table__cell v-data-table__cell--themeable v-data-table-col"
           style="width: 125px;"
      >
        <div class="v-data-table__cell-content text-align--start">
          <div class="v-data-table-col__title">
            Name
          </div>
          <span class="v-data-table-col__actions">
          </span>
          <transition-stub name="fade"
                           mode
                           appear="false"
                           persisted="false"
                           css="true"
          >
          </transition-stub>
        </div>
      </div>
      <div class="v-data-table__cell v-data-table__cell--themeable v-data-table-col"
           style="width: 125px;"
      >
        <div class="v-data-table__cell-content text-align--start">
          <div class="v-data-table-col__title">
            Email
          </div>
          <span class="v-data-table-col__actions">
          </span>
          <transition-stub name="fade"
                           mode
                           appear="false"
                           persisted="false"
                           css="true"
          >
          </transition-stub>
        </div>
      </div>
      <div class="v-data-table__cell v-data-table__cell--themeable v-data-table-col"
           style="width: 125px;"
      >
        <div class="v-data-table__cell-content text-align--start">
          <div class="v-data-table-col__title">
            Body
          </div>
          <span class="v-data-table-col__actions">
          </span>
          <transition-stub name="fade"
                           mode
                           appear="false"
                           persisted="false"
                           css="true"
          >
          </transition-stub>
        </div>
      </div>
    </div>
    <div class="v-data-table__body">
    </div>
  </div>
  <div class="v-data-table__footer">
    <div class="v-data-table__pagination">
      <div class="v-data-table__pagination-select">
        <span class="v-data-table__pagination-label">
          Rows per page
        </span>
        <button class="v-button primary">
          <div class="v-button__content">
            <div class="v-data-table__rows-count-value">
              5
            </div>
          </div>
        </button>
      </div>
      <div class="v-data-table__pagination-pages">
        -
      </div>
      <div class="v-data-table__pagination-route">
        <button class="v-button elevation-3 primary"
                style="width: 42px;"
        >
          <div class="v-button__content">
            <i class="v-icon fas fa-chevron-left sm white--text">
            </i>
          </div>
        </button>
        <button class="v-button elevation-3 primary"
                style="width: 42px; margin: 0px 10px;"
        >
          <div class="v-button__content">
            1
          </div>
        </button>
        <button class="v-button elevation-3 primary"
                style="width: 42px;"
        >
          <div class="v-button__content">
            <i class="v-icon fas fa-chevron-right sm white--text">
            </i>
          </div>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`VDataTable should test column sort and match snapshot 1`] = `
<div class="v-data-table">
  <div class="v-data-table__inner">
    <div class="v-data-table__header"
         color
    >
      <div class="v-data-table__cell v-data-table__cell--themeable v-data-table-col"
           style="width: 125px;"
      >
        <div class="v-data-table__cell-content text-align--start">
          <div class="v-data-table-col__title">
            Name
          </div>
          <span class="v-data-table-col__actions">
            <button class="v-icon v-icon--clickable fas fa-arrow-up sm v-data-table-col__actions-sort">
            </button>
          </span>
          <transition-stub name="fade"
                           mode
                           appear="false"
                           persisted="false"
                           css="true"
          >
          </transition-stub>
        </div>
      </div>
      <div class="v-data-table__cell v-data-table__cell--themeable v-data-table-col"
           style="width: 125px;"
      >
        <div class="v-data-table__cell-content text-align--start">
          <div class="v-data-table-col__title">
            Email
          </div>
          <span class="v-data-table-col__actions">
          </span>
          <transition-stub name="fade"
                           mode
                           appear="false"
                           persisted="false"
                           css="true"
          >
          </transition-stub>
        </div>
      </div>
      <div class="v-data-table__cell v-data-table__cell--themeable v-data-table-col"
           style="width: 125px;"
      >
        <div class="v-data-table__cell-content text-align--start">
          <div class="v-data-table-col__title">
            Body
          </div>
          <span class="v-data-table-col__actions">
          </span>
          <transition-stub name="fade"
                           mode
                           appear="false"
                           persisted="false"
                           css="true"
          >
          </transition-stub>
        </div>
      </div>
    </div>
    <div class="v-data-table__body">
      <div class="v-data-table__row">
        <div class="v-data-table__cell v-data-table__cell--themeable"
             style="width: 125px;"
        >
          <div class="v-data-table__cell-content text-align--start">
            tttttt
          </div>
        </div>
        <div class="v-data-table__cell v-data-table__cell--themeable"
             style="width: 125px;"
        >
          <div class="v-data-table__cell-content text-align--start">
            Vincenza_Klocko@albertha.name
          </div>
        </div>
        <div class="v-data-table__cell v-data-table__cell--themeable"
             style="width: 125px;"
        >
          <div class="v-data-table__cell-content text-align--start">
            veritatis voluptates necessitatibus maiores corrupti
            neque et exercitationem amet sit et
            ullam velit sit magnam laborum
            magni ut molestias
          </div>
        </div>
      </div>
      <div class="v-data-table__row">
        <div class="v-data-table__cell v-data-table__cell--themeable"
             style="width: 125px;"
        >
          <div class="v-data-table__cell-content text-align--start">
            ssssss
          </div>
        </div>
        <div class="v-data-table__cell v-data-table__cell--themeable"
             style="width: 125px;"
        >
          <div class="v-data-table__cell-content text-align--start">
            Preston_Hudson@blaise.tv
          </div>
        </div>
        <div class="v-data-table__cell v-data-table__cell--themeable"
             style="width: 125px;"
        >
          <div class="v-data-table__cell-content text-align--start">
            consequatur necessitatibus totam sed sit dolorum
            recusandae quae odio excepturi voluptatum harum voluptas
            quisquam sit ad eveniet delectus
            doloribus odio qui non labore
          </div>
        </div>
      </div>
      <div class="v-data-table__row">
        <div class="v-data-table__cell v-data-table__cell--themeable"
             style="width: 125px;"
        >
          <div class="v-data-table__cell-content text-align--start">
            rrrrrr
          </div>
        </div>
        <div class="v-data-table__cell v-data-table__cell--themeable"
             style="width: 125px;"
        >
          <div class="v-data-table__cell-content text-align--start">
            Christine@ayana.info
          </div>
        </div>
        <div class="v-data-table__cell v-data-table__cell--themeable"
             style="width: 125px;"
        >
          <div class="v-data-table__cell-content text-align--start">
            iste ut laborum aliquid velit facere itaque
            quo ut soluta dicta voluptate
            error tempore aut et
            sequi reiciendis dignissimos expedita consequuntur libero sed fugiat facilis
          </div>
        </div>
      </div>
      <div class="v-data-table__row">
        <div class="v-data-table__cell v-data-table__cell--themeable"
             style="width: 125px;"
        >
          <div class="v-data-table__cell-content text-align--start">
            qqqqqq
          </div>
        </div>
        <div class="v-data-table__cell v-data-table__cell--themeable"
             style="width: 125px;"
        >
          <div class="v-data-table__cell-content text-align--start">
            Maynard.Hodkiewicz@roberta.com
          </div>
        </div>
        <div class="v-data-table__cell v-data-table__cell--themeable"
             style="width: 125px;"
        >
          <div class="v-data-table__cell-content text-align--start">
            nihil ut voluptates blanditiis autem odio dicta rerum
            quisquam saepe et est
            sunt quasi nemo laudantium deserunt
            molestias tempora quo quia
          </div>
        </div>
      </div>
      <div class="v-data-table__row">
        <div class="v-data-table__cell v-data-table__cell--themeable"
             style="width: 125px;"
        >
          <div class="v-data-table__cell-content text-align--start">
            pppppp
          </div>
        </div>
        <div class="v-data-table__cell v-data-table__cell--themeable"
             style="width: 125px;"
        >
          <div class="v-data-table__cell-content text-align--start">
            Nathan@solon.io
          </div>
        </div>
        <div class="v-data-table__cell v-data-table__cell--themeable"
             style="width: 125px;"
        >
          <div class="v-data-table__cell-content text-align--start">
            vel quae voluptas qui exercitationem
            voluptatibus unde sed
            minima et qui ipsam aspernatur
            expedita magnam laudantium et et quaerat ut qui dolorum
          </div>
        </div>
      </div>
    </div>
  </div>
  <div class="v-data-table__footer">
    <div class="v-data-table__pagination">
      <div class="v-data-table__pagination-select">
        <span class="v-data-table__pagination-label">
          Rows per page
        </span>
        <button class="v-button primary">
          <div class="v-button__content">
            <div class="v-data-table__rows-count-value">
              5
            </div>
            <div class="v-menu">
            </div>
            <transition-stub name="fade"
                             mode
                             appear="false"
                             persisted="false"
                             css="true"
            >
            </transition-stub>
          </div>
        </button>
      </div>
      <div class="v-data-table__pagination-pages">
        1 - 5 of 20
      </div>
      <div class="v-data-table__pagination-route">
        <button class="v-button elevation-3 primary"
                style="width: 42px;"
        >
          <div class="v-button__content">
            <i class="v-icon fas fa-chevron-left sm white--text">
            </i>
          </div>
        </button>
        <button class="v-button elevation-3 primary"
                style="width: 42px; margin: 0px 10px;"
        >
          <div class="v-button__content">
            1
          </div>
        </button>
        <button class="v-button elevation-3 primary"
                style="width: 42px;"
        >
          <div class="v-button__content">
            <i class="v-icon fas fa-chevron-right sm white--text">
            </i>
          </div>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`VDataTable should test table custom filter and match snapshot 1`] = `
<div class="v-data-table">
  <div class="v-data-table__inner">
    <div class="v-data-table__header"
         color
    >
      <div class="v-data-table__cell v-data-table__cell--themeable v-data-table-col v-data-table-col--sorted"
           style="width: 125px;"
      >
        <div class="v-data-table__cell-content text-align--start">
          <div class="v-data-table-col__title">
            Name
          </div>
          <span class="v-data-table-col__actions">
            <button class="v-icon v-icon--clickable fas fa-align-justify sm v-data-table-col__actions-filter v-data-table-col__actions-filter--active">
            </button>
          </span>
          <transition-stub name="fade"
                           mode
                           appear="false"
                           persisted="false"
                           css="true"
          >
            <div class="v-data-table-col__filter elevation-5 white">
              <div class="v-input v-input--has-prepend-icon">
                <div class="v-input__label">
                  <label class="v-label v-label--on-input">
                    search
                  </label>
                </div>
                <div class="v-input__text-field">
                  <div class="v-input__prepend-icon">
                    <i class="v-icon fas fa-search"
                       style="font-size: 16px;"
                    >
                    </i>
                  </div>
                  <div class="v-text-field">
                    <input class="v-text-field__input"
                           type="text"
                    >
                  </div>
                </div>
                <div class="v-input__hints">
                  <transition-stub name="fade"
                                   mode
                                   appear="false"
                                   persisted="false"
                                   css="true"
                  >
                  </transition-stub>
                </div>
              </div>
            </div>
          </transition-stub>
        </div>
      </div>
      <div class="v-data-table__cell v-data-table__cell--themeable v-data-table-col"
           style="width: 125px;"
      >
        <div class="v-data-table__cell-content text-align--start">
          <div class="v-data-table-col__title">
            Email
          </div>
          <span class="v-data-table-col__actions">
          </span>
          <transition-stub name="fade"
                           mode
                           appear="false"
                           persisted="false"
                           css="true"
          >
          </transition-stub>
        </div>
      </div>
      <div class="v-data-table__cell v-data-table__cell--themeable v-data-table-col"
           style="width: 125px;"
      >
        <div class="v-data-table__cell-content text-align--start">
          <div class="v-data-table-col__title">
            Body
          </div>
          <span class="v-data-table-col__actions">
          </span>
          <transition-stub name="fade"
                           mode
                           appear="false"
                           persisted="false"
                           css="true"
          >
          </transition-stub>
        </div>
      </div>
    </div>
    <div class="v-data-table__body">
      <div class="v-data-table__row">
        <div class="v-data-table__cell v-data-table__cell--themeable"
             style="width: 125px;"
        >
          <div class="v-data-table__cell-content text-align--start">
            tttttt
          </div>
        </div>
        <div class="v-data-table__cell v-data-table__cell--themeable"
             style="width: 125px;"
        >
          <div class="v-data-table__cell-content text-align--start">
            Vincenza_Klocko@albertha.name
          </div>
        </div>
        <div class="v-data-table__cell v-data-table__cell--themeable"
             style="width: 125px;"
        >
          <div class="v-data-table__cell-content text-align--start">
            veritatis voluptates necessitatibus maiores corrupti
            neque et exercitationem amet sit et
            ullam velit sit magnam laborum
            magni ut molestias
          </div>
        </div>
      </div>
      <div class="v-data-table__row">
        <div class="v-data-table__cell v-data-table__cell--themeable"
             style="width: 125px;"
        >
          <div class="v-data-table__cell-content text-align--start">
            ssssss
          </div>
        </div>
        <div class="v-data-table__cell v-data-table__cell--themeable"
             style="width: 125px;"
        >
          <div class="v-data-table__cell-content text-align--start">
            Preston_Hudson@blaise.tv
          </div>
        </div>
        <div class="v-data-table__cell v-data-table__cell--themeable"
             style="width: 125px;"
        >
          <div class="v-data-table__cell-content text-align--start">
            consequatur necessitatibus totam sed sit dolorum
            recusandae quae odio excepturi voluptatum harum voluptas
            quisquam sit ad eveniet delectus
            doloribus odio qui non labore
          </div>
        </div>
      </div>
      <div class="v-data-table__row">
        <div class="v-data-table__cell v-data-table__cell--themeable"
             style="width: 125px;"
        >
          <div class="v-data-table__cell-content text-align--start">
            rrrrrr
          </div>
        </div>
        <div class="v-data-table__cell v-data-table__cell--themeable"
             style="width: 125px;"
        >
          <div class="v-data-table__cell-content text-align--start">
            Christine@ayana.info
          </div>
        </div>
        <div class="v-data-table__cell v-data-table__cell--themeable"
             style="width: 125px;"
        >
          <div class="v-data-table__cell-content text-align--start">
            iste ut laborum aliquid velit facere itaque
            quo ut soluta dicta voluptate
            error tempore aut et
            sequi reiciendis dignissimos expedita consequuntur libero sed fugiat facilis
          </div>
        </div>
      </div>
      <div class="v-data-table__row">
        <div class="v-data-table__cell v-data-table__cell--themeable"
             style="width: 125px;"
        >
          <div class="v-data-table__cell-content text-align--start">
            qqqqqq
          </div>
        </div>
        <div class="v-data-table__cell v-data-table__cell--themeable"
             style="width: 125px;"
        >
          <div class="v-data-table__cell-content text-align--start">
            Maynard.Hodkiewicz@roberta.com
          </div>
        </div>
        <div class="v-data-table__cell v-data-table__cell--themeable"
             style="width: 125px;"
        >
          <div class="v-data-table__cell-content text-align--start">
            nihil ut voluptates blanditiis autem odio dicta rerum
            quisquam saepe et est
            sunt quasi nemo laudantium deserunt
            molestias tempora quo quia
          </div>
        </div>
      </div>
      <div class="v-data-table__row">
        <div class="v-data-table__cell v-data-table__cell--themeable"
             style="width: 125px;"
        >
          <div class="v-data-table__cell-content text-align--start">
            pppppp
          </div>
        </div>
        <div class="v-data-table__cell v-data-table__cell--themeable"
             style="width: 125px;"
        >
          <div class="v-data-table__cell-content text-align--start">
            Nathan@solon.io
          </div>
        </div>
        <div class="v-data-table__cell v-data-table__cell--themeable"
             style="width: 125px;"
        >
          <div class="v-data-table__cell-content text-align--start">
            vel quae voluptas qui exercitationem
            voluptatibus unde sed
            minima et qui ipsam aspernatur
            expedita magnam laudantium et et quaerat ut qui dolorum
          </div>
        </div>
      </div>
    </div>
  </div>
  <div class="v-data-table__footer">
    <div class="v-data-table__pagination">
      <div class="v-data-table__pagination-select">
        <span class="v-data-table__pagination-label">
          Rows per page
        </span>
        <button class="v-button primary">
          <div class="v-button__content">
            <div class="v-data-table__rows-count-value">
              5
            </div>
            <div class="v-menu">
            </div>
            <transition-stub name="fade"
                             mode
                             appear="false"
                             persisted="false"
                             css="true"
            >
            </transition-stub>
          </div>
        </button>
      </div>
      <div class="v-data-table__pagination-pages">
        1 - 5 of 20
      </div>
      <div class="v-data-table__pagination-route">
        <button class="v-button elevation-3 primary"
                style="width: 42px;"
        >
          <div class="v-button__content">
            <i class="v-icon fas fa-chevron-left sm white--text">
            </i>
          </div>
        </button>
        <button class="v-button elevation-3 primary"
                style="width: 42px; margin: 0px 10px;"
        >
          <div class="v-button__content">
            1
          </div>
        </button>
        <button class="v-button elevation-3 primary"
                style="width: 42px;"
        >
          <div class="v-button__content">
            <i class="v-icon fas fa-chevron-right sm white--text">
            </i>
          </div>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`VDataTable should test table filter and match snapshot 1`] = `
<div class="v-data-table">
  <div class="v-data-table__inner">
    <div class="v-data-table__header"
         color
    >
      <div class="v-data-table__cell v-data-table__cell--themeable v-data-table-col v-data-table-col--sorted"
           style="width: 125px;"
      >
        <div class="v-data-table__cell-content text-align--start">
          <div class="v-data-table-col__title">
            Name
          </div>
          <span class="v-data-table-col__actions">
            <button class="v-icon v-icon--clickable fas fa-align-justify sm v-data-table-col__actions-filter v-data-table-col__actions-filter--active">
            </button>
          </span>
          <transition-stub name="fade"
                           mode
                           appear="false"
                           persisted="false"
                           css="true"
          >
            <div class="v-data-table-col__filter elevation-5 white"
                 style
            >
              <div class="v-input v-input--has-prepend-icon">
                <div class="v-input__label">
                  <label class="v-label v-label--on-input">
                    search
                  </label>
                </div>
                <div class="v-input__text-field">
                  <div class="v-input__prepend-icon">
                    <i class="v-icon fas fa-search"
                       style="font-size: 16px;"
                    >
                    </i>
                  </div>
                  <div class="v-text-field">
                    <input class="v-text-field__input"
                           type="text"
                    >
                  </div>
                </div>
                <div class="v-input__hints">
                  <transition-stub name="fade"
                                   mode
                                   appear="false"
                                   persisted="false"
                                   css="true"
                  >
                  </transition-stub>
                </div>
              </div>
            </div>
          </transition-stub>
        </div>
      </div>
      <div class="v-data-table__cell v-data-table__cell--themeable v-data-table-col"
           style="width: 125px;"
      >
        <div class="v-data-table__cell-content text-align--start">
          <div class="v-data-table-col__title">
            Email
          </div>
          <span class="v-data-table-col__actions">
          </span>
          <transition-stub name="fade"
                           mode
                           appear="false"
                           persisted="false"
                           css="true"
          >
          </transition-stub>
        </div>
      </div>
      <div class="v-data-table__cell v-data-table__cell--themeable v-data-table-col"
           style="width: 125px;"
      >
        <div class="v-data-table__cell-content text-align--start">
          <div class="v-data-table-col__title">
            Body
          </div>
          <span class="v-data-table-col__actions">
          </span>
          <transition-stub name="fade"
                           mode
                           appear="false"
                           persisted="false"
                           css="true"
          >
          </transition-stub>
        </div>
      </div>
    </div>
    <div class="v-data-table__body">
      <div class="v-data-table__row">
        <div class="v-data-table__cell v-data-table__cell--themeable"
             style="width: 125px;"
        >
          <div class="v-data-table__cell-content text-align--start">
            Ben
          </div>
        </div>
        <div class="v-data-table__cell v-data-table__cell--themeable"
             style="width: 125px;"
        >
          <div class="v-data-table__cell-content text-align--start">
            ben@mail.ru
          </div>
        </div>
        <div class="v-data-table__cell v-data-table__cell--themeable"
             style="width: 125px;"
        >
          <div class="v-data-table__cell-content text-align--start">
            some body text
          </div>
        </div>
      </div>
    </div>
  </div>
  <div class="v-data-table__footer">
    <div class="v-data-table__pagination">
      <div class="v-data-table__pagination-select">
        <span class="v-data-table__pagination-label">
          Rows per page
        </span>
        <button class="v-button primary">
          <div class="v-button__content">
            <div class="v-data-table__rows-count-value">
              5
            </div>
            <div class="v-menu">
            </div>
            <transition-stub name="fade"
                             mode
                             appear="false"
                             persisted="false"
                             css="true"
            >
            </transition-stub>
          </div>
        </button>
      </div>
      <div class="v-data-table__pagination-pages">
        1 - 1 of 1
      </div>
      <div class="v-data-table__pagination-route">
        <button class="v-button elevation-3 primary"
                style="width: 42px;"
        >
          <div class="v-button__content">
            <i class="v-icon fas fa-chevron-left sm white--text">
            </i>
          </div>
        </button>
        <button class="v-button elevation-3 primary"
                style="width: 42px; margin: 0px 10px;"
        >
          <div class="v-button__content">
            1
          </div>
        </button>
        <button class="v-button elevation-3 primary"
                style="width: 42px;"
        >
          <div class="v-button__content">
            <i class="v-icon fas fa-chevron-right sm white--text">
            </i>
          </div>
        </button>
      </div>
    </div>
  </div>
</div>
`;
